--- a/style.css
+++ b/style.css
@@ -273,6 +273,11 @@ li svg:hover path,svg:focus    path, svg:active path {
     justify-content: center;
     margin-top: 5rem;
   }
+  .feature_box_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
   .featured-in_container{
     display: flex;
